--- a/src/components/LoadingMask/LoadingMask.styles.css
+++ b/src/components/LoadingMask/LoadingMask.styles.css
@@ -1,6 +1,8 @@
 .loading-mask-container {
   width: 100%;
   height: 100%;
+  min-width: 150px;
+  min-height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
