--- a/src/components/ScorecardInterview/interview-detail-table.css
+++ b/src/components/ScorecardInterview/interview-detail-table.css
@@ -6,3 +6,13 @@ table.disable-triple tr.disabled-row {
   background-color: rgba(0, 0, 0, 0.05) !important;
   color: #212529;
 }
+
+table tr.open-row {
+  background-color: #349fd5;
+  color: #fff;
+}
+
+table tr.disabled-row {
+  background-color: rgba(0, 0, 0, 0.05) !important;
+  color: #212529;
+}
