--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+.capture-form-container * {
+  font-family: "Times New Roman", Times, serif !important;
+}
+
 .modal-body .card {
   border: 0;
 }
